# MatrixWaifu

./: CMakeLists.txt  README.md
include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  vulkansc.h  wgl.h
shaders/: fragment_shader.txt  vertex_shader.txt
src/: gui.cpp  gui.h  imagesource.cpp  imagesource.h  main.cpp  main2.cpp  shader.cpp  shader.h
src/glad/: egl.c  gl.c  gles1.c  gles2.c  glsc2.c  glx.c  vulkan.c  vulkansc.c  wgl.c
